# pedestal

./: Plan.md  README.md
marina-middleware/: .env  Cargo.toml
marina-middleware/src/: backend_client.rs  cache.rs  error.rs  main.rs  middleware.rs  models.rs  rate_limiter.rs  state.rs
marina-middleware/src/handlers/: auth.rs  balance.rs  cards.rs  mod.rs  stations.rs  users.rs
mobileApp/: ContentView.swift  mobileAppApp.swift
mobileApp.xcodeproj/: project.pbxproj
mobileApp/App/: MyApp.swift
mobileApp/Assets.xcassets/AppIcon.appiconset/: Contents.json
mobileApp/Core/Authentication/Models/: ApiModels.swift  Keychaielper.swift  User.swift
mobileApp/Core/Authentication/ViewModels/: AuthViewModel.swift  GlobalUsageManager.swift
mobileApp/Core/Network/: ApiService.swift
mobileApp/Core/Root/: ContentView.swift
mobileApp/Features/Auth/Components/: AuthTextField.swift
mobileApp/Features/Auth/Views/: SignInView.swift  SignUpView.swift
mobileApp/Features/Balance/: AddCardView.swift  BalanceView.swift
mobileApp/Features/History/Models/: Consumption.swift  MockConsumptionData.swift  UsageHistoryManager.swift
mobileApp/Features/History/ViewModels/: HistoryViewModel.swift
mobileApp/Features/History/Views/: ChartView.swift  FilterView.swift  HistoryView.swift
mobileApp/Features/Home/: HomeView.swift
mobileApp/Features/Home/QR/: QRCodeScannerView.swift  QRPedestalDetailLoader.swift
mobileApp/Features/Home/SideMenü/: SideMenuView.swift
mobileApp/Features/Notification/: NotificationManager.swift
mobileApp/Features/Pedestals/Models/: Pedestal.swift  (+1 more)
(+7 files in other folders)
